--- a/package.json
+++ b/package.json
@@ -9,8 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.5",
+    "@heroicons/react": "^1.0.6",
+    "autoprefixer": "^10.4.13",
+    "daisyui": "^2.43.0",
+    "difflib": "^0.2.4",
     "next": "13.0.6",
+    "postcss": "^8.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.2.4"
   }
 }
