--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "13.0.6",
     "postcss": "^8.4.19",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.10.1"
   },
   "devDependencies": {
     "tailwindcss": "^3.2.4"
